metadata/force-app/main/default/objects/CustomName_sGGjG__c/CustomName_sGGjG__c.object-meta.xml
<CustomObject>
    <description>Description_zFdak</description>
    <label>CustomLabel_OSlEK</label>
    <nameField>
        <label>CustomLabel_OSlEK</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_OSlEKs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>