metadata/force-app/main/default/objects/CustomName_sGGjG__c/fields/CustomField_gkTkq__c.field-meta.xml
<CustomField>
    <fullName>CustomField_gkTkq__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldOwbMQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>