metadata/force-app/main/default/objects/CustomName_sGGjG__c/fields/CustomField_xwRha__c.field-meta.xml
<CustomField>
    <fullName>CustomField_xwRha__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldaXcgT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>